Prevent app type from covering name

--- a/src/server/static/css/main.css
+++ b/src/server/static/css/main.css
@@ -179,7 +179,7 @@ select {
 }
 
 .list-group-item-heading {
-  padding-right: 25px;
+  padding-right: 40px;
 }
 
 .filters {
